welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: Missing closing brace `}' assumed here
def positionFinale():Boolean = {
^